JDK-8297215: Update libs tests to use @enablePreview