@@ -24,8 +24,9 @@
 /**
  * @test
  * @summary Unit test for Thread.Builder
- * @compile --enable-preview -source ${jdk.version} BuilderTest.java
- * @run testng/othervm --enable-preview BuilderTest
+ * @enablePreview
+ * @compile BuilderTest.java
+ * @run testng/othervm BuilderTest
  */
 
 import java.util.concurrent.*;
