@@ -26,8 +26,9 @@
  * @summary Test virtual thread park when scheduler is a fixed thread pool
  * @requires vm.continuations
  * @modules java.base/java.lang:+open
- * @compile --enable-preview -source ${jdk.version} ParkWithFixedThreadPool.java
- * @run testng/othervm --enable-preview ParkWithFixedThreadPool
+ * @enablePreview
+ * @compile ParkWithFixedThreadPool.java
+ * @run testng/othervm ParkWithFixedThreadPool
  */
 import java.util.concurrent.*;
 import java.util.concurrent.atomic.*;
