@@ -25,8 +25,9 @@
  * @test
  * @summary Test virtual threads using Object.wait/notifyAll
  * @library /test/lib
- * @compile --enable-preview -source ${jdk.version} WaitNotify.java
- * @run testng/othervm --enable-preview WaitNotify
+ * @enablePreview
+ * @compile WaitNotify.java
+ * @run testng/othervm WaitNotify
  */
 
 import java.util.concurrent.Semaphore;
