@@ -26,8 +26,9 @@
  * @summary Stress test asynchronous Thread.getStackTrace
  * @requires vm.debug != true & vm.continuations
  * @modules java.base/java.lang:+open
- * @compile --enable-preview -source ${jdk.version} GetStackTraceALot.java ../ThreadBuilders.java
- * @run main/othervm --enable-preview GetStackTraceALot
+ * @enablePreview
+ * @compile GetStackTraceALot.java ../ThreadBuilders.java
+ * @run main/othervm GetStackTraceALot
  *
  */
 
@@ -35,8 +36,8 @@
  * @test
  * @requires vm.debug == true & vm.continuations
  * @modules java.base/java.lang:+open
- * @compile --enable-preview -source ${jdk.version} GetStackTraceALot.java ../ThreadBuilders.java
- * @run main/othervm/timeout=300 --enable-preview GetStackTraceALot 1000
+ * @compile GetStackTraceALot.java ../ThreadBuilders.java
+ * @run main/othervm/timeout=300 GetStackTraceALot 1000
  */
 
 import java.time.Duration;
