@@ -40,8 +40,9 @@ import jdk.test.lib.jfr.Events;
  * @key jfr
  * @requires vm.hasJFR & vm.continuations
  * @library /test/lib
- * @compile --enable-preview -source ${jdk.version} TestThreadSleepEvent.java
- * @run main/othervm --enable-preview jdk.jfr.event.runtime.TestThreadSleepEvent
+ * @enablePreview
+ * @compile TestThreadSleepEvent.java
+ * @run main/othervm jdk.jfr.event.runtime.TestThreadSleepEvent
  */
 public class TestThreadSleepEvent {
 
